package classes;

//Dávid
public enum Ertek {
    VIII,IX,X,FELSO, KIRALY, ASZ
}
