package classes;

public enum Szin {
//Gergő
    PIROS, ZOLD, MAKK, TOK
}
